<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="fill_horizontal"
    android:visibility="visible"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="258dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="83dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/orange"
        android:text="save miso"
        android:textAlignment="center"
        android:textColor="#271A06"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="178dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/orange"
        android:text="view forest"
        android:textAlignment="center"
        android:textColor="#271A06"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butForest" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="187dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/orange"
        android:text="scan recyclables"
        android:textAlignment="center"
        android:textColor="#271A06"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butCamera" />

    <ImageView
        android:id="@+id/butCamera"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="scanner for recyclables"
        android:src="@drawable/baseline_camera_alt_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/butForest"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="miso's forest"
        android:src="@drawable/baseline_park_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/butCamera"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>