...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recycling.MyRecyclingFragment">


    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Items"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRecycled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:backgroundTint="@color/red_light"
...
